Archive2/91/aab5a4a37ad8dd/output
main.cpp:3:12: error: 'A' was declared 'extern' and later 'static' [-fpermissive]
 static int A = 101;
            ^
main.cpp:2:12: note: previous declaration of 'A'
 extern int A;
            ^
