Archive2/91/aab5a4a37ad8dd/main.cpp
#include <iostream>
extern int A;
static int A = 101;
class A{};
int main()
{
    std::cout << A << '\n';
}
